[Gensokyo/Royalflare] Gensokyo striped tables, fix search dark mode

--- a/assets/gensokyo/gensokyo.css
+++ b/assets/gensokyo/gensokyo.css
@@ -4,6 +4,9 @@ p {
 table, th, td {
     border: 1px solid black;
 }
+tr:nth-child(even), #player_td {
+    background-color: #dddddd;
+}
 form {
     margin-bottom: 10px;
 }
@@ -23,6 +26,9 @@ form {
 }
 .dropdown_content:hover .dropdown_content {
     display: block;
+}
+.general_header:not(#back) {
+    background-color: #aaaaaa;
 }
 .wrap {
     border: 1px solid #000;
